--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -14,12 +14,12 @@
     z-index: 2;
   }
   
-  h1.app-name {
+  .app-name {
     margin-left: 8px;
   }
 
   .app-sidenav-start {
-    width: 200px;
+    width: 250px;
   }
   
   .app-sidenav-container {
