--- a/src/app/components/tablero/tablero.component.html
+++ b/src/app/components/tablero/tablero.component.html
@@ -1,3 +1,55 @@
-<p>
-  tablero works!
-</p>
+<div class="container">
+  <div class="row">
+
+    <div class="col-12 col-mat-6 col-xl-4 p-2">
+      <a [routerLink]="['/usuarios']">
+        <mat-card class="d-flex align-items-center">
+          <mat-card-title class="mb-0">Usuarios</mat-card-title>
+          <span class="spacer"></span>
+          <i class="fa fa-building icono-tablero"></i>
+        </mat-card>
+      </a>
+    </div>
+
+    <div class="col-12 col-mat-6 col-xl-4 p-2">
+      <a [routerLink]="['/anuncios']">
+        <mat-card class="d-flex align-items-center">
+          <mat-card-title class="mb-0">Anuncios</mat-card-title>
+          <span class="spacer"></span>
+          <i class="fa fa-building icono-tablero"></i>
+        </mat-card>
+      </a>
+    </div>
+
+    <div class="col-12 col-mat-6 col-xl-4 p-2">
+      <a [routerLink]="['/crear-anuncio']">
+        <mat-card class="d-flex align-items-center">
+          <mat-card-title class="mb-0">Crear Anuncio</mat-card-title>
+          <span class="spacer"></span>
+          <i class="fa fa-building icono-tablero"></i>
+        </mat-card>
+      </a>
+    </div>
+
+    <div class="col-12 col-mat-6 col-xl-4 p-2">
+      <a [routerLink]="['/propiedades']">
+        <mat-card class="d-flex align-items-center">
+          <mat-card-title class="mb-0">Propiedades</mat-card-title>
+          <span class="spacer"></span>
+          <i class="fa fa-building icono-tablero"></i>
+        </mat-card>
+      </a>
+    </div>
+
+    <div class="col-12 col-mat-6 col-xl-4 p-2">
+      <a [routerLink]="['/propiedades']">
+        <mat-card class="d-flex align-items-center">
+          <mat-card-title class="mb-0">Propiedades</mat-card-title>
+          <span class="spacer"></span>
+          <i class="fa fa-building icono-tablero"></i>
+        </mat-card>
+      </a>
+    </div>
+
+  </div>
+</div>
