--- a/src/app/components/anuncios/anuncios.component.html
+++ b/src/app/components/anuncios/anuncios.component.html
@@ -1,3 +1,57 @@
-<div class="container">
-  anuncios!!
+<div class="container py-3  ">
+  <!--     d-flex flex-column align-items-center -->
+
+  <div class="row justify-content-center">
+
+    <div class="col col-lg-8">
+
+        <!-- style="max-width:600px;" -->
+      <mat-card *ngFor="let anuncio of anuncios" class="mb-3" >
+
+        <mat-card-header>
+          <div mat-card-avatar style="background-size:cover" [style.background-image]="'url(' + anuncio.avatar_src + ')' "></div>
+          <mat-card-title>{{anuncio.titulo}}</mat-card-title>
+          <mat-card-subtitle>{{anuncio.fecha_publicacion}}</mat-card-subtitle>
+        </mat-card-header>
+
+        <img mat-card-image [src]="anuncio.img_src">
+
+        <mat-card-content class="text-center">
+          <p>{{anuncio.descripcion}}</p>
+          <h3>
+            <span style="text-decoration:line-through">$1,000.00</span>
+            <span>$900.00</span>
+          </h3>
+          <!-- <h3>{{anuncio.precio}}</h3> -->
+          <p>{{anuncio.categoria}}</p>
+
+        </mat-card-content>
+
+        <!--     <ion-row>
+      <ion-col>
+        <button ion-button icon-left clear small>
+          <ion-icon name="thumbs-up"></ion-icon>
+          <div>12 Likes</div>
+        </button>
+      </ion-col>
+      <ion-col>
+        <button ion-button icon-left clear small>
+          <ion-icon name="text"></ion-icon>
+          <div>4 Comments</div>
+        </button>
+      </ion-col>
+      <ion-col center text-center>
+        <ion-note>
+          11h ago
+        </ion-note>
+      </ion-col>
+    </ion-row> -->
+
+      </mat-card>
+
+    </div>
+  </div>
+
+
+
 </div>
