--- a/src/app/components/anuncios/anuncios.component.html
+++ b/src/app/components/anuncios/anuncios.component.html
@@ -19,7 +19,7 @@
         <mat-card-content class="text-center">
           <p>{{anuncio.descripcion}}</p>
           <h3>
-            <span style="text-decoration:line-through">$1,000.00</span>
+            <span class="text-danger" style="text-decoration:line-through">$1,000.00</span>
             <span>$900.00</span>
           </h3>
           <!-- <h3>{{anuncio.precio}}</h3> -->
