--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-
+@import "style/form-validation";
 .spacer{
     flex: 1 1 auto;
 }
+
+/******* validacion formularios *****/
