--- a/src/app/components/crear-anuncio/crear-anuncio.component.html
+++ b/src/app/components/crear-anuncio/crear-anuncio.component.html
@@ -17,7 +17,17 @@
         <div class="form-group row">
           <label class="col-lg-3 col-form-label">Fecha publicación</label>
           <div class="col-lg-9">
-            <input class="form-control" type="text" placeholder="" [(ngModel)]="anuncio.fecha_publicacion" name="fecha_publicacion" required/>
+            <div class="input-group">
+              <!-- (keydown.enter)="$event.preventDefault()" -->
+              <input class="form-control" [matDatepicker]="picker" placeholder="yyyy-mm-dd" [(ngModel)]="anuncio.fecha_publicacion" id="fecha_publicacion"
+                name="fecha_publicacion" required>
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-secondary" (click)="picker.open()">
+                  <i class="fa fa-calendar"></i>
+                </button>
+              </span>
+            </div>
+            <mat-datepicker touchUi="true" #picker></mat-datepicker>
           </div>
         </div>
 
@@ -28,12 +38,6 @@
           </div>
         </div>
 
-        <div class="form-group row">
-          <label class="col-lg-3 col-form-label">Mostrar</label>
-          <div class="col-lg-9">
-            <mat-checkbox ngModel name="mostrar_agregar">Mostrar botón agregar</mat-checkbox>
-          </div>
-        </div>
 
         <div class="form-group row">
           <label class="col-lg-3 col-form-label">Publicar precios</label>
@@ -60,6 +64,13 @@
           <label class="col-lg-3 col-form-label">Precio Tachado</label>
           <div class="col-lg-9">
             <input class="form-control" type="text" placeholder="" [(ngModel)]="anuncio.precio_tachado" name="precio_tachado" />
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label class="col-lg-3 col-form-label">Mostrar</label>
+          <div class="col-lg-9">
+            <mat-checkbox [(ngModel)]="anuncio.mostrar_agregar" name="mostrar_agregar">Mostrar botón agregar</mat-checkbox>
           </div>
         </div>
 
