--- a/src/app/components/crear-anuncio/crear-anuncio.component.html
+++ b/src/app/components/crear-anuncio/crear-anuncio.component.html
@@ -35,6 +35,7 @@
           <label class="col-lg-3 col-form-label">Descripción del anuncio</label>
           <div class="col-lg-9">
             <textarea class="form-control" rows="4" placeholder="" [(ngModel)]="anuncio.descripcion" name="descripcion" required> </textarea>
+
           </div>
         </div>
 
@@ -46,26 +47,31 @@
           </div>
         </div>
 
-        <div class="form-group row">
-          <label class="col-lg-3 col-form-label">Oferta</label>
-          <div class="col-lg-9">
-            <mat-checkbox ngModel name="es_oferta">Es Oferta</mat-checkbox>
-          </div>
-        </div>
+        <fieldset [disabled]="!anuncio.mostrar_precios">
 
-        <div class="form-group row">
-          <label class="col-lg-3 col-form-label">Precio</label>
-          <div class="col-lg-9">
-            <input class="form-control" type="text" placeholder="" [(ngModel)]="anuncio.precio" name="precio" />
+          <div class="form-group row">
+            <label class="col-lg-3 col-form-label">Oferta</label>
+            <div class="col-lg-9">
+              <mat-checkbox [(ngModel)]="anuncio.es_oferta" name="es_oferta">Es Oferta</mat-checkbox>
+            </div>
           </div>
-        </div>
 
-        <div class="form-group row">
-          <label class="col-lg-3 col-form-label">Precio Tachado</label>
-          <div class="col-lg-9">
-            <input class="form-control" type="text" placeholder="" [(ngModel)]="anuncio.precio_tachado" name="precio_tachado" />
+          <div class="form-group row">
+            <label class="col-lg-3 col-form-label">Precio</label>
+            <div class="col-lg-9">
+              <input class="form-control" type="text" placeholder="" [(ngModel)]="anuncio.precio" name="precio" />
+            </div>
           </div>
-        </div>
+
+          <div class="form-group row">
+            <label class="col-lg-3 col-form-label">Precio Tachado</label>
+            <div class="col-lg-9">
+              <input [disabled]="!anuncio.es_oferta" class="form-control" type="text" placeholder="" [(ngModel)]="anuncio.precio_tachado"
+                name="precio_tachado" />
+            </div>
+          </div>
+
+        </fieldset>
 
         <div class="form-group row">
           <label class="col-lg-3 col-form-label">Mostrar</label>
