--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,4 +4,12 @@
     flex: 1 1 auto;
 }
 
+.toolbar-fab {
+    position: fixed !important;
+    right: 20px;
+    top:80px;
+    //bottom: 10px;
+    z-index: 100;
+  }
+
 /******* validacion formularios *****/
