--- a/src/app/components/tablero/tablero.component.html
+++ b/src/app/components/tablero/tablero.component.html
@@ -6,7 +6,7 @@
         <mat-card class="d-flex align-items-center">
           <mat-card-title class="mb-0">Usuarios</mat-card-title>
           <span class="spacer"></span>
-          <i class="fa fa-building icono-tablero"></i>
+          <i class="fa fa-users icono-tablero"></i>
         </mat-card>
       </a>
     </div>
@@ -16,7 +16,7 @@
         <mat-card class="d-flex align-items-center">
           <mat-card-title class="mb-0">Anuncios</mat-card-title>
           <span class="spacer"></span>
-          <i class="fa fa-building icono-tablero"></i>
+          <i class="fa fa-id-badge icono-tablero"></i>
         </mat-card>
       </a>
     </div>
@@ -26,12 +26,12 @@
         <mat-card class="d-flex align-items-center">
           <mat-card-title class="mb-0">Crear Anuncio</mat-card-title>
           <span class="spacer"></span>
-          <i class="fa fa-building icono-tablero"></i>
+          <i class="fa fa-plus-square icono-tablero"></i>
         </mat-card>
       </a>
     </div>
 
-    <div class="col-12 col-mat-6 col-xl-4 p-2">
+<!--     <div class="col-12 col-mat-6 col-xl-4 p-2">
       <a [routerLink]="['/propiedades']">
         <mat-card class="d-flex align-items-center">
           <mat-card-title class="mb-0">Propiedades</mat-card-title>
@@ -49,7 +49,7 @@
           <i class="fa fa-building icono-tablero"></i>
         </mat-card>
       </a>
-    </div>
+    </div> -->
 
   </div>
 </div>
