--- a/src/app/components/anuncios/anuncios.component.html
+++ b/src/app/components/anuncios/anuncios.component.html
@@ -5,7 +5,7 @@
 
     <div class="col col-lg-8">
 
-      <app-anuncio [anuncio]="anuncio" *ngFor="let anuncio of anuncios" class="mb-3"></app-anuncio>
+      <app-anuncio [anuncio]="anuncio" (delete)="delAnuncio(anuncio)" *ngFor="let anuncio of anuncios" class="mb-3"></app-anuncio>
 
     </div>
 
