--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -1,73 +1,73 @@
 <mat-toolbar color="">
-        <div class="container mb-0">
-          <div class="d-flex align-items-center">
-            <span>Usuarios</span>
-            <div class="spacer"></div>
-            <button mat-icon-button (click)="agregarUsuario()">
-              <mat-icon>add</mat-icon>
-            </button>
-          </div>
+  <div class="container mb-0">
+    <div class="d-flex align-items-center">
+      <span>Usuarios</span>
+      <div class="spacer"></div>
+      <button mat-icon-button (click)="agregarUsuario()">
+        <mat-icon>add</mat-icon>
+      </button>
+    </div>
+  </div>
+</mat-toolbar>
+
+<div class="container p15px">
+
+  <div *ngIf="loading" class="loading">
+    <mat-spinner></mat-spinner>
+  </div>
+
+  <div class="row">
+    <div class="col">
+
+      <div class="card mat-elevation-z2">
+        <div class="table-responsive">
+          <table class="table table-striped my-table-sm table-align-middle">
+            <thead>
+              <tr>
+                <th>Id</th>
+                <th>Nombre</th>
+                <th>Email</th>
+                <th>Rol</th>
+                <th></th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr *ngFor="let usuario of usuarios">
+                <td>{{usuario.id_usuario}}</td>
+                <td>{{usuario.nombre}}</td>
+                <td>{{usuario.email}}</td>
+                <td>{{usuario.id_rol}}</td>
+                <td class="text-right">
+
+                  <button mat-icon-button [matMenuTriggerFor]="menu">
+                    <mat-icon>more_vert</mat-icon>
+                  </button>
+
+                  <mat-menu #menu="matMenu">
+                    <button mat-menu-item (click)="editarUsuario(usuario)">
+                      <mat-icon>create</mat-icon>
+                      <span>Editar</span>
+                    </button>
+                    <button mat-menu-item (click)="changePassword(usuario)">
+                      <mat-icon>lock</mat-icon>
+                      <span>Cambiar contraseña</span>
+                    </button>
+                    <button mat-menu-item (click)="delUsuario(usuario)">
+                      <mat-icon>delete</mat-icon>
+                      <span>Eliminar</span>
+                    </button>
+                  </mat-menu>
+                </td>
+              </tr>
+
+            </tbody>
+          </table>
         </div>
-      </mat-toolbar>
-      
-      <div class="container p15px">
-      
-        <div *ngIf="loading" class="loading">
-          <mat-spinner></mat-spinner>
-        </div>
-      
-        <div class="row">
-          <div class="col">
-      
-            <div class="card mat-elevation-z2">
-              <div class="table-responsive">
-                <table class="table table-striped my-table-sm table-align-middle">
-                  <thead>
-                    <tr>
-                      <th>Id</th>
-                      <th>Nombre</th>
-                      <th>Email</th>
-                      <th>Rol</th>
-                      <th></th>
-                    </tr>
-                  </thead>
-      
-                  <tbody>
-                    <tr>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td class="text-right">
-      
-                        <button mat-icon-button [matMenuTriggerFor]="menu">
-                          <mat-icon>more_vert</mat-icon>
-                        </button>
-      
-                        <mat-menu #menu="matMenu">
-                          <button mat-menu-item (click)="editarUsuario(usuario)">
-                            <mat-icon>create</mat-icon>
-                            <span>Editar</span>
-                          </button>
-                          <button mat-menu-item (click)="changePassword(usuario)">
-                            <mat-icon>lock</mat-icon>
-                            <span>Cambiar contraseña</span>
-                          </button>
-                          <button mat-menu-item (click)="delUsuario(usuario)">
-                            <mat-icon>delete</mat-icon>
-                            <span>Eliminar</span>
-                          </button>
-                        </mat-menu>
-                      </td>
-                    </tr>
-      
-                  </tbody>
-                </table>
-              </div>
-            </div>
-      
-      
-          </div>
-        </div>
-      
       </div>
+
+
+    </div>
+  </div>
+
+</div>
