--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -11,6 +11,11 @@
 </mat-toolbar>
 
 <div class="container p15px">
+  
+  <div *ngIf="loading" class="loading">
+    <mat-spinner></mat-spinner>
+  </div>
+
 
   <div *ngIf="loading" class="loading">
     <mat-spinner></mat-spinner>
