--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,4 +12,22 @@
     z-index: 100;
   }
 
+  .loading {
+    position: fixed !important;
+    z-index: 999;
+    //height: 2em;
+    //width: 2em;
+    overflow: visible;
+    //margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  
+    //last
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
 /******* validacion formularios *****/
