--- a/src/app/components/anuncio/anuncio.component.html
+++ b/src/app/components/anuncio/anuncio.component.html
@@ -1,12 +1,11 @@
 <mat-card>
-
   <mat-card-header>
     <div mat-card-avatar style="background-size:cover" [style.background-image]="'url(' + (anuncio.avatar_src || 'assets/imgs/logo.png' ) + ')' "></div>
     <mat-card-title>{{anuncio.titulo}}</mat-card-title>
     <mat-card-subtitle>{{anuncio.fecha_publicacion|date:'longDate'}}</mat-card-subtitle>
   </mat-card-header>
 
-  <img mat-card-image [src]="(anuncio.img_src|| 'assets/imgs/pants.jpg')">
+  <img mat-card-image [src]="(anuncio.img_src|| 'assets/imgs/drop-images.png')">
 
   <mat-card-content class="text-center">
     <p>{{anuncio.descripcion}}</p>
@@ -29,24 +28,4 @@
       <i class="fa fa-shopping-cart"></i>
     </button>
   </mat-card-actions>
-  <!--     <ion-row>
-  <ion-col>
-    <button ion-button icon-left clear small>
-      <ion-icon name="thumbs-up"></ion-icon>
-      <div>12 Likes</div>
-    </button>
-  </ion-col>
-  <ion-col>
-    <button ion-button icon-left clear small>
-      <ion-icon name="text"></ion-icon>
-      <div>4 Comments</div>
-    </button>
-  </ion-col>
-  <ion-col center text-center>
-    <ion-note>
-      11h ago
-    </ion-note>
-  </ion-col>
-</ion-row> -->
-
 </mat-card>
