--- a/src/app/components/crear-anuncio/crear-anuncio.component.html
+++ b/src/app/components/crear-anuncio/crear-anuncio.component.html
@@ -8,7 +8,7 @@
   <div class="row">
 
     <div class="col-12 col-md-6">
-      <h3 class="text-center">Configuración</h3>
+      <h4 class="text-center">Configuración</h4>
 
       <form #formAnuncio="ngForm" id="formAnuncio" (ngSubmit)="createAnuncio(formAnuncio)">
 
@@ -35,6 +35,16 @@
             <mat-datepicker touchUi="true" #picker></mat-datepicker>
           </div>
         </div>
+
+        <div class="form-group row">
+          <label class="col-lg-3 col-form-label">Imagen</label>
+          <div class="col-lg-9">
+            <input class="form-control" type="file" name="img_src" #input (change)="onChangeFile($event, input.files, anuncio)" />
+          </div>
+        </div>
+
+        <button type="button" (click)="uploadImage()" [disabled]="fileItems.length!=0">Subir Imagen</button>
+
 
         <div class="form-group row">
           <label class="col-lg-3 col-form-label">Descripción del anuncio</label>
@@ -102,7 +112,7 @@
 
 
     <div class="col-12 col-md-6">
-      <h3 class="text-center">Previsualización</h3>
+      <h4 class="text-center">Previsualización</h4>
 
       <app-anuncio [anuncio]="anuncio"></app-anuncio>
 
