--- a/src/app/components/anuncio/anuncio.component.html
+++ b/src/app/components/anuncio/anuncio.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="mb-3">
   <mat-card-header>
     <div mat-card-avatar style="background-size:cover" [style.background-image]="'url(' + (anuncio.avatar_src || 'assets/imgs/logo.png' ) + ')' "></div>
     <mat-card-title>{{anuncio.titulo}}</mat-card-title>
@@ -17,7 +17,7 @@
     <p>{{anuncio.categoria}}</p>
 
     <div class="mt-2">
-      <button class="btn btn-outline-secondary" (click)="editarAnuncio()">Editar</button>      
+      <button class="btn btn-outline-secondary" (click)="editarAnuncio()">Editar</button>
       <button class="btn btn-outline-secondary" (click)="delAnuncio()">Eliminar</button>
 
     </div>
