--- a/src/app/components/crear-anuncio/crear-anuncio.component.html
+++ b/src/app/components/crear-anuncio/crear-anuncio.component.html
@@ -43,7 +43,7 @@
           </div>
         </div>
 
-        <button type="button" (click)="uploadImage()" [disabled]="fileItems.length!=0">Subir Imagen</button>
+        <button type="button" class="btn btn-primary" (click)="uploadImage()">Subir Imagen</button>
 
 
         <div class="form-group row">
