--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -12,7 +12,7 @@
     <span class="spacer"></span>
 
     <button mat-button [matMenuTriggerFor]="userMenu">
-      <span class="d-none d-sm-inline">{{username}}</span>
+      <span class="d-none d-sm-inline">username</span>
       <mat-icon>person</mat-icon>
     </button>
 
