get info bucket storage

--- a/src/app/components/anuncios/anuncios.component.html
+++ b/src/app/components/anuncios/anuncios.component.html
@@ -3,7 +3,7 @@
 
   <div class="row justify-content-center">
 
-    <div class="col col-lg-8">
+    <div class="col col-md-8 col-lg-6">
 
       <app-anuncio [anuncio]="anuncio" (delete)="delAnuncio(anuncio)" *ngFor="let anuncio of anuncios"></app-anuncio>
 
