--- a/src/app/components/crear-anuncio/crear-anuncio.component.html
+++ b/src/app/components/crear-anuncio/crear-anuncio.component.html
@@ -43,7 +43,10 @@
           </div>
         </div>
 
-        <button type="button" class="btn btn-primary" (click)="uploadImage()">Subir Imagen</button>
+        <div class="form-group row">
+          <div class="col-lg-9 offset-lg-3"></div>
+          <button type="button" class="btn btn-primary" (click)="uploadImage()">Subir Imagen</button>
+        </div>
 
 
         <div class="form-group row">
@@ -96,7 +99,7 @@
         </fieldset>
 
         <div class="form-group row">
-         <!--  <label class="col-lg-3 col-form-label">Mostrar</label> -->
+          <!--  <label class="col-lg-3 col-form-label">Mostrar</label> -->
           <div class="col-lg-9 ml-auto">
             <mat-checkbox [(ngModel)]="anuncio.mostrar_agregar" name="mostrar_agregar">Mostrar botón agregar</mat-checkbox>
           </div>
