--- a/src/app/components/tablero/tablero.component.html
+++ b/src/app/components/tablero/tablero.component.html
@@ -31,25 +31,25 @@
       </a>
     </div>
 
-<!--     <div class="col-12 col-mat-6 col-xl-4 p-2">
-      <a [routerLink]="['/propiedades']">
+    <div class="col-12 col-mat-6 col-xl-4 p-2">
+      <a [routerLink]="['/clientes']">
         <mat-card class="d-flex align-items-center">
-          <mat-card-title class="mb-0">Propiedades</mat-card-title>
+          <mat-card-title class="mb-0">Clientes</mat-card-title>
           <span class="spacer"></span>
-          <i class="fa fa-building icono-tablero"></i>
+          <i class="fa fa-user icono-tablero"></i>
         </mat-card>
       </a>
     </div>
 
     <div class="col-12 col-mat-6 col-xl-4 p-2">
-      <a [routerLink]="['/propiedades']">
+      <a [routerLink]="['/pedidos']">
         <mat-card class="d-flex align-items-center">
-          <mat-card-title class="mb-0">Propiedades</mat-card-title>
+          <mat-card-title class="mb-0">Pedidos</mat-card-title>
           <span class="spacer"></span>
-          <i class="fa fa-building icono-tablero"></i>
+          <i class="fa fa-cart-arrow-down icono-tablero"></i>
         </mat-card>
       </a>
-    </div> -->
+    </div> 
 
   </div>
 </div>
