--- a/src/app/components/anuncio/anuncio.component.html
+++ b/src/app/components/anuncio/anuncio.component.html
@@ -5,7 +5,7 @@
     <mat-card-subtitle>{{anuncio.fecha_publicacion|date:'longDate'}}</mat-card-subtitle>
   </mat-card-header>
 
-  <img mat-card-image [src]="(anuncio.img_src|| 'assets/imgs/drop-images.png')">
+  <img mat-card-image [src]="(anuncio.thumb_url || 'assets/imgs/drop-images.png')">
 
   <mat-card-content class="text-center">
     <p>{{anuncio.descripcion}}</p>
