--- a/src/app/components/crear-anuncio/crear-anuncio.component.html
+++ b/src/app/components/crear-anuncio/crear-anuncio.component.html
@@ -45,9 +45,9 @@
 
         <div class="form-group row">
           <div class="col-lg-9 offset-lg-3"></div>
-          <button type="button" class="btn btn-primary" (click)="clickInputImage(inputImage)">Seleccionar Imagen</button>
-          <button type="button" class="btn btn-primary" (click)="uploadImage()">Subir Imagen</button>
-          <button type="button" class="btn btn-primary" (click)="print()">Print</button>
+          <!--<button type="button" class="btn btn-primary" (click)="clickInputImage(inputImage)">Seleccionar Imagen</button>
+           <button type="button" class="btn btn-primary" (click)="uploadImage()">Subir Imagen</button>
+          <button type="button" class="btn btn-primary" (click)="print()">Print</button> -->
         </div>
 
 
