--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,29 @@
-<p>
-  login works!
-</p>
+<div class="login-container">
+  <div *ngIf="loading" class="loading">
+    <mat-spinner></mat-spinner>
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <form #formLogin="ngForm" class="form-signin" (ngSubmit)="login(usuario)">
+          <h4 class="form-signin-heading">Candidaturas INDEPENDIENTES</h4>
+          <label for="email" class="sr-only">Email</label>
+          <input type="email" id="email" name="email" class="form-control" placeholder="Email" [(ngModel)]="usuario.email" required
+            autofocus>
+          <label for="password" class="sr-only">Password</label>
+          <input type="password" id="password" name="password" class="form-control" placeholder="Password" [(ngModel)]="usuario.password"
+            required>
+
+          <!--   <div class="checkbox"> 
+          <label>
+            <input type="checkbox" value="remember-me"> Recordar
+          </label>
+        </div> -->
+          <button class="btn btn-lg btn-primary btn-block" [disabled]="!formLogin.form.valid" type="submit">Iniciar sesión</button>
+          <div class="text-danger text-center" *ngIf="alert">{{alert}}</div>
+        </form>
+
+      </div>
+    </div>
+  </div>
+</div>
