--- a/src/app/components/anuncio/anuncio.component.html
+++ b/src/app/components/anuncio/anuncio.component.html
@@ -17,7 +17,7 @@
     <p>{{anuncio.categoria}}</p>
 
     <div class="mt-2">
-      <button class="btn btn-outline-secondary" (click)="editarAnuncio()">Editar</button>
+      <button class="btn btn-outline-secondary" (click)="editarAnuncio(anuncio)">Editar</button>
       <button class="btn btn-outline-secondary" (click)="delAnuncio()">Eliminar</button>
 
     </div>
