--- a/src/app/components/pedido/pedido.component.html
+++ b/src/app/components/pedido/pedido.component.html
@@ -10,19 +10,19 @@
           <div class="form-group row">
             <label class="col-sm-2">Nombre:</label>
             <div class="col-sm-10">
-              <span>{{pedidos.nombre_cliente}}</span>
+              <span>{{pedido.cliente_nombre}}</span>
             </div>
           </div>
           <div class="form-group row">
             <label class="col-sm-2">Email:</label>
             <div class="col-sm-10">
-              <span>{{pedidos.email}}</span>
+              <span>{{pedido.cliente_email}}</span>
             </div>
           </div>
           <div class="form-group row">
             <label class="col-sm-2">Teléfono:</label>
             <div class="col-sm-10">
-              <span>{{pedidos.telefono}}</span>
+              <span>{{pedido.cliente_numero}}</span>
             </div>
           </div>
         </mat-nav-list>
@@ -32,7 +32,7 @@
         <h5 class="list-header">Datos de Envio</h5>
         <mat-nav-list>
 
-          {{pedidos.calle}}, {{pedidos.numero}}, {{pedidos.colonia}}, {{pedidos.cp}}
+
 
         </mat-nav-list>
       </div>
@@ -48,43 +48,27 @@
             <thead>
               <tr>
                 <th>Producto</th>
+                <th>Cantidad</th>
                 <th>Precio</th>
-                <th></th>
+                <th>Total</th>
+
               </tr>
             </thead>
 
             <tbody>
-              <tr *ngFor="let pedido of pedidos.productos">
-                <td>{{pedido.producto}}</td>
-                <td>{{pedido.precio}}</td>
-                <td class="text-right">
-
-                  <button mat-icon-button [matMenuTriggerFor]="menu">
-                    <mat-icon>more_vert</mat-icon>
-                  </button>
-
-                  <mat-menu #menu="matMenu">
-                    <button mat-menu-item (click)="editarUsuario(usuario)">
-                      <mat-icon>create</mat-icon>
-                      <span>Editar</span>
-                    </button>
-                    <button mat-menu-item (click)="changePassword(usuario)">
-                      <mat-icon>lock</mat-icon>
-                      <span>Cambiar contraseña</span>
-                    </button>
-                    <button mat-menu-item (click)="delUsuario(usuario)">
-                      <mat-icon>delete</mat-icon>
-                      <span>Eliminar</span>
-                    </button>
-                  </mat-menu>
-                </td>
+              <tr *ngFor="let producto of pedido.productos">
+                <td>{{producto.titulo}}</td>
+                <td>{{producto.cantidad}}</td>
+                <td>{{producto.precio|currency}}</td>
+                <td>{{producto.cantidad * producto.precio|currency}}</td>
 
               </tr>
               <tr>
-                <td>Total</td>
-                <td>{{pedidos.total}}</td>
+                <td></td>
+                <td></td>
+                <td><strong>Total</strong></td>
+                <td>{{totalProductos()|currency}}</td>
               </tr>
-
             </tbody>
           </table>
         </div>
