--- a/src/app/dialogos/pedido-dialogo/pedido-dialogo.component.html
+++ b/src/app/dialogos/pedido-dialogo/pedido-dialogo.component.html
@@ -10,20 +10,28 @@
               <tr>
 
                 <th>Producto</th>
+                <th>Cantidad</th>
                 <th>Precio</th>
+                <th>Total</th>
 
               </tr>
             </thead>
 
             <tbody>
 
-              <tr *ngFor="let pedido of data.pedidos">
-                <td>{{pedido.producto}}</td>
-                <td>{{pedido.precio}}</td>               
+              <tr *ngFor="let producto of data.productos">
+                <td>{{producto.titulo}}</td>
+                <td>{{producto.cantidad}}</td>
+                <td>{{producto.precio|currency}}</td>
+                <td>{{producto.cantidad * producto.precio|currency}}</td>
               </tr>
               <tr>
-                <td>Total</td>
-                <td>{{data.total}}</td>
+                <td></td>
+                <td></td>
+                <td>TOTAL:</td>
+                <td>
+                  <strong>{{totalProductos()|currency}}</strong>
+                </td>
               </tr>
 
             </tbody>
@@ -35,6 +43,5 @@
 
 </div>
 <div mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="false">CANCELAR</button>
-  <button mat-button [mat-dialog-close]="true" color="warn">ELIMINAR</button>
+  <button mat-button [mat-dialog-close]="true" color="primary">ACEPTAR</button>
 </div>
