--- a/src/app/dialogos/cliente-dialogo/cliente-dialogo.component.html
+++ b/src/app/dialogos/cliente-dialogo/cliente-dialogo.component.html
@@ -18,11 +18,11 @@
   <div class="form-group row">
     <label class="col-sm-2">Teléfono:</label>
     <div class="col-sm-10">
-      <span>{{data.telefono}}</span>
+      <span>{{data.numero}}</span>
     </div>
   </div>
 
 </div>
 <div mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="true" color="warn">ACEPTAR</button>
+  <button mat-button [mat-dialog-close]="true" color="primary">ACEPTAR</button>
 </div>
