--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,6 +1,8 @@
 .login-container {
     //height: 100vh;
+    position: absolute;
     height: 100%;
+    width: 100%;
     
     display: flex;
     flex-direction: column;
