--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -39,7 +39,7 @@
 
             <tbody>
               <tr *ngFor="let usuario of usuarios">
-                <td>{{usuario.id_usuario}}</td>
+                <td>{{usuario.id}}</td>
                 <td>{{usuario.nombre}}</td>
                 <td>{{usuario.email}}</td>
                 <td>{{usuario.id_rol}}</td>
